Make header absolute instead of fixed and align right

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,6 +4,8 @@
 @import "{{ site.theme }}";
 
 #header {
+  position: absolute;
+
   nav {
     background: transparent;
     margin: 12px auto;
@@ -12,7 +14,7 @@
       font-family: 'OpenSansLight', 'Helvetica Neue', Helvetica, Arial, sans-serif;
       font-weight: normal;
       font-size: 40px;
-      text-align: left;
+      text-align: right;
       line-height: 36px;
 
       a {
